# sdfr

./: .gitmodules  CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: wheels.yml
src/: CommitInfo.cmake  _commit_info.py.in
src/sdfr/: __init__.py
